fixed project technologies on mobile

--- a/personal-site/src/styles/Navbar.module.css
+++ b/personal-site/src/styles/Navbar.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     position: fixed;
     top: 0;
