--- a/personal-site/src/styles/Projects.module.css
+++ b/personal-site/src/styles/Projects.module.css
@@ -76,7 +76,7 @@
 .project_technologies {
     list-style: none;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 .project_technologies li {
@@ -84,7 +84,7 @@
 }
 .project_links {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
 }
 .project_links a {
